RESOLVED FIXED105215
[BlackBerry] Deadlock caused by PluginViewPrivate::destroyBuffers()
https://bugs.webkit.org/show_bug.cgi?id=105215
Summary [BlackBerry] Deadlock caused by PluginViewPrivate::destroyBuffers()
Yong Li
Reported 2012-12-17 13:59:57 PST
We've seen Deadlock caused by PluginViewPrivate::destroyBuffers locking mutexex ans sending sync message at the same time.
Attachments
the patch (shrink the mutex locking scope) (2.16 KB, patch)
2012-12-17 14:06 PST, Yong Li
rwlbuis: review+
updated to commit (2.20 KB, patch)
2012-12-17 14:26 PST, Yong Li
no flags
Yong Li
Comment 1 2012-12-17 14:06:01 PST
Created attachment 179798 [details] the patch (shrink the mutex locking scope)
Rob Buis
Comment 2 2012-12-17 14:09:45 PST
Comment on attachment 179798 [details] the patch (shrink the mutex locking scope) LGTM.
Yong Li
Comment 3 2012-12-17 14:26:05 PST
Created attachment 179802 [details] updated to commit
WebKit Review Bot
Comment 4 2012-12-17 14:44:33 PST
Comment on attachment 179802 [details] updated to commit Clearing flags on attachment: 179802 Committed r137949: <http://trac.webkit.org/changeset/137949>
WebKit Review Bot
Comment 5 2012-12-17 14:44:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.