[BlackBerry] Deadlock caused by PluginViewPrivate::destroyBuffers() https://bugs.webkit.org/show_bug.cgi?id=105215

Reviewed by Rob Buis.
Also internally reviewed by George Staikos.

PR# 266443
It should release mutexes before sending sync message.

* plugins/blackberry/PluginViewPrivateBlackBerry.cpp:
(WebCore::PluginViewPrivate::destroyBuffers):


Canonical link: https://commits.webkit.org/123460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137949 268f45cc-cd09-0410-ab3c-d52691b4dbfc